[DevToolsIcons] Fix whitespace problems in issues pane
Screenshots: https://imgur.com/a/HfQX8eP

Bug: 1427397
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/4479829
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/panels/issues/issuesTree.css
+++ b/front_end/panels/issues/issuesTree.css
@@ -31,7 +31,7 @@
   margin-top: 8px;
 }
 
-.issues .children li.parent::before {
+.issues .affected-resources li.parent::before {
   margin-top: 3px;
   margin-right: 0;
 }
@@ -69,7 +69,8 @@
 }
 
 .unhide-all-issues-button {
-  line-height: normal;
+  margin: 0;
+  height: 20px;
 }
 
 p {
@@ -104,12 +105,6 @@ p {
 
 .header devtools-hide-issues-menu.has-context-menu-opened {
   visibility: visible;
-}
-
-.issue-category .header,
-.issue-kind .header {
-  line-height: 24px;
-  padding-left: 2px;
 }
 
 .title {
@@ -165,7 +160,7 @@ p {
 }
 
 devtools-icon.leading-issue-icon {
-  margin: 1px 7px -1px;
+  margin: 1px 0 -1px 7px;
 }
 
 .message {
@@ -409,8 +404,7 @@ ul > li.plain-enum::before {
 }
 
 .aggregated-issues-count {
-  padding-right: 7px;
-  padding-top: 3px;
+  padding: 3px 7px 0;
 }
 
 .affected-resource-directive-info-header {
